--- a/plugins/_global/conf/signup.conf.ini
+++ b/plugins/_global/conf/signup.conf.ini
@@ -1,6 +1,6 @@
 [mailchimp]
 mailchimp_api_key = api key here
-mailchimp_subscribe_url = https://<dc>.api.mailchimp.com/2.0/lists/subscribe.json
+mailchimp_subscribe_url = https://%1.api.mailchimp.com/2.0/lists/subscribe.json
 mailchimp_list_id = list id here, you can find it on the bottom of page admin.mailchimp.com/lists/settings
 
 [webgalamb]
