Remove default minimum size for photo uploads.

--- a/plugins/_jquery/conf/system/fields.conf.ini
+++ b/plugins/_jquery/conf/system/fields.conf.ini
@@ -1,6 +1,6 @@
 [photos]
-field_photos_min_height_default = 300
-field_photos_min_width_default = 300
+field_photos_min_height_default = false
+field_photos_min_width_default = false
 
 # Large photos can use up a lot of memory for resizing! False means unlimited.
 field_photos_max_height_default = false
