Default minimum size required, so use 1x1.

--- a/plugins/_jquery/conf/system/fields.conf.ini
+++ b/plugins/_jquery/conf/system/fields.conf.ini
@@ -1,6 +1,7 @@
 [photos]
-field_photos_min_height_default = false
-field_photos_min_width_default = false
+# You must specify a default minimum size. You can set it to 1x1 to allow anything.
+field_photos_min_height_default = 1
+field_photos_min_width_default = 1
 
 # Large photos can use up a lot of memory for resizing! False means unlimited.
 field_photos_max_height_default = false
