Better comments, remove unsupported SMTP settings.

--- a/plugins/_global/conf/email_smtp.conf.ini
+++ b/plugins/_global/conf/email_smtp.conf.ini
@@ -1,10 +1,4 @@
-# API setup (faster, default)
+# Set to true and choose a supported provider to enable email sending (postmark, mandrill)
 email_use_api = false
 email_provider = postmark
-email_api_key = 
-
-# SMTP setup (used if API is set to false)
-email_smtp_server = smtp.postmarkapp.com
-email_smtp_port = 25
-email_smtp_user =
-email_smtp_pass =
+email_api_key =
