Add user and sendgrid to config file.

--- a/plugins/_global/conf/email_smtp.conf.ini
+++ b/plugins/_global/conf/email_smtp.conf.ini
@@ -1,4 +1,5 @@
-# Set to true and choose a supported provider to enable email sending (postmark, mandrill)
+# Set to true and choose a supported provider to enable email sending (postmark, mandrill, sendgrid)
 email_use_api = false
 email_provider = postmark
+email_api_user =
 email_api_key =
