Remove signup lib, cleanup.
Removing more mootools stuff.

--- a/plugins/_global/conf/export.conf.ini
+++ b/plugins/_global/conf/export.conf.ini
@@ -1,4 +1,3 @@
-php_excel_path = /var/www/_scripts/PHPExcel/PHPExcel.php
-
+# Set export limits
 export_max_execution_time = 300
 export_max_memory = 1024M
