Add category_auto_add_parents support, fix bugs.

--- a/plugins/_global/conf/category.conf.ini
+++ b/plugins/_global/conf/category.conf.ini
@@ -2,3 +2,6 @@
 
 # Set this to true if you want categories to be limited to two levels. This makes UX better, but limits functionality.
 category_two_level = true
+
+# Set this to true if you want to automatically add parent categories when a category is added to a model object. (Works only with set() and save().)
+category_auto_add_parents = true
